--- a/bundle/Resources/config/services/core.yaml
+++ b/bundle/Resources/config/services/core.yaml
@@ -35,15 +35,15 @@ services:
         arguments:
             - "@netgen_remote_media.provider"
 
-    netgen_remote_media.provider.cloudinary.resource_type_converter:
-        class: Netgen\RemoteMedia\Core\Provider\Cloudinary\ResourceTypeConverter
+    netgen_remote_media.provider.cloudinary.converter.resource_type:
+        class: Netgen\RemoteMedia\Core\Provider\Cloudinary\Converter\ResourceType
         public: false
 
     netgen_remote_media.provider.cloudinary.factory.remote_resource:
         class: Netgen\RemoteMedia\Core\Provider\Cloudinary\RemoteResourceFactory
         public: false
         arguments:
-            - '@netgen_remote_media.provider.cloudinary.resource_type_converter'
+            - '@netgen_remote_media.provider.cloudinary.converter.resource_type'
 
     netgen_remote_media.provider.cloudinary.factory.search_result:
         class: Netgen\RemoteMedia\Core\Provider\Cloudinary\SearchResultFactory
