NGSTACK-533 Create Cloudinary search expression resolver

--- a/bundle/Resources/config/services/core.yaml
+++ b/bundle/Resources/config/services/core.yaml
@@ -50,3 +50,9 @@ services:
         public: false
         arguments:
             - '@netgen_remote_media.provider.cloudinary.factory.remote_resource'
+
+    netgen_remote_media.provider.cloudinary.resolver.search_expression:
+        class: Netgen\RemoteMedia\Core\Provider\Cloudinary\Resolver\SearchExpression
+        public: false
+        arguments:
+            - '@netgen_remote_media.provider.cloudinary.converter.resource_type'
