--- a/bundle/Resources/config/services/core.yaml
+++ b/bundle/Resources/config/services/core.yaml
@@ -40,13 +40,13 @@ services:
         public: false
 
     netgen_remote_media.provider.cloudinary.factory.remote_resource:
-        class: Netgen\RemoteMedia\Core\Provider\Cloudinary\RemoteResourceFactory
+        class: Netgen\RemoteMedia\Core\Provider\Cloudinary\Factory\RemoteResource
         public: false
         arguments:
             - '@netgen_remote_media.provider.cloudinary.converter.resource_type'
 
     netgen_remote_media.provider.cloudinary.factory.search_result:
-        class: Netgen\RemoteMedia\Core\Provider\Cloudinary\SearchResultFactory
+        class: Netgen\RemoteMedia\Core\Provider\Cloudinary\Factory\SearchResult
         public: false
         arguments:
             - '@netgen_remote_media.provider.cloudinary.factory.remote_resource'
