NGSTACK-533 Refactor Cloudinary provider

--- a/bundle/Resources/config/services/core.yaml
+++ b/bundle/Resources/config/services/core.yaml
@@ -29,9 +29,11 @@ services:
         class: Netgen\RemoteMedia\Core\Provider\Cloudinary\CloudinaryProvider
         arguments:
             - "@netgen_remote_media.handler_registry"
-            - "@netgen_remote_media.variation.resolver"
+            - "@netgen_remote_media.resolver.variation"
+            - "@doctrine.orm.entity_manager"
             - "@netgen_remote_media.provider.cloudinary.gateway.cached"
-            - "$parameters.audio.enable_waveform;netgen_remote_media$"
+            - "@netgen_remote_media.factory.date_time"
+            - "@netgen_remote_media.provider.cloudinary.resolver.upload_options"
             - "@?logger"
 
     netgen_remote_media.helper:
