--- a/bundle/Resources/config/services/templating.yaml
+++ b/bundle/Resources/config/services/templating.yaml
@@ -8,5 +8,6 @@ services:
         class: Netgen\Bundle\RemoteMediaBundle\Templating\Twig\Runtime\RemoteMediaRuntime
         arguments:
             - "@netgen_remote_media.provider"
+            - "@netgen_remote_media.resolver.variation"
         tags:
             - { name: twig.runtime }
