--- a/bundle/Resources/config/routing.yml
+++ b/bundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+netgen_remote_media_ajax:
+    resource: "routing/ajax.yaml"
+    prefix: /ngremotemedia/ajax
+
 netgen_remote_media_callback_cloudinary_notify:
     path: /ngremotemedia/callback/cloudinary/notify
     defaults:
