--- a/bundle/Resources/config/services/controllers.yaml
+++ b/bundle/Resources/config/services/controllers.yaml
@@ -1,4 +1,10 @@
 services:
+    netgen_remote_media.controller.browse:
+        class: Netgen\Bundle\RemoteMediaBundle\Controller\Browse
+        public: true
+        arguments:
+            - '@netgen_remote_media.provider'
+
     netgen_remote_media.controller.callback.cloudinary.notify:
         class: Netgen\Bundle\RemoteMediaBundle\Controller\Callback\Cloudinary\Notify
         public: true
