NGSTACK-533 Create AJAX controllers for manipulating folders

--- a/bundle/Resources/config/routing/ajax.yaml
+++ b/bundle/Resources/config/routing/ajax.yaml
@@ -1,3 +1,15 @@
+netgen_remote_media_ajax_folder_load:
+    path: /folder/load
+    defaults:
+        _controller: netgen_remote_media.controller.folder.load
+    methods: [GET]
+
+netgen_remote_media_ajax_folder_create:
+    path: /folder/create
+    defaults:
+        _controller: netgen_remote_media.controller.folder.create
+    methods: [POST]
+
 netgen_remote_media_ajax_browse:
     path: /browse
     defaults:
