--- a/bundle/Resources/config/services/controllers.yaml
+++ b/bundle/Resources/config/services/controllers.yaml
@@ -1,4 +1,16 @@
 services:
+    netgen_remote_media.controller.folder.load:
+        class: Netgen\Bundle\RemoteMediaBundle\Controller\Folder\Load
+        public: true
+        arguments:
+            - '@netgen_remote_media.provider'
+
+    netgen_remote_media.controller.folder.create:
+        class: Netgen\Bundle\RemoteMediaBundle\Controller\Folder\Create
+        public: true
+        arguments:
+            - '@netgen_remote_media.provider'
+
     netgen_remote_media.controller.browse:
         class: Netgen\Bundle\RemoteMediaBundle\Controller\Browse
         public: true
