NGSTACK-533 Create AJAX controller for fetching facets

--- a/bundle/Resources/config/routing/ajax.yaml
+++ b/bundle/Resources/config/routing/ajax.yaml
@@ -1,3 +1,9 @@
+netgen_remote_media_ajax_facets_load:
+    path: /facets/load
+    defaults:
+        _controller: netgen_remote_media.controller.facets.load
+    methods: [GET]
+
 netgen_remote_media_ajax_folder_load:
     path: /folder/load
     defaults:
