--- a/bundle/Resources/config/services/controllers.yaml
+++ b/bundle/Resources/config/services/controllers.yaml
@@ -18,8 +18,8 @@ services:
         arguments:
             - '@netgen_remote_media.provider'
 
-    netgen_remote_media.controller.browse:
-        class: Netgen\Bundle\RemoteMediaBundle\Controller\Browse
+    netgen_remote_media.controller.resource.browse:
+        class: Netgen\Bundle\RemoteMediaBundle\Controller\Resource\Browse
         public: true
         arguments:
             - '@netgen_remote_media.provider'
