--- a/bundle/Resources/config/services/controllers.yaml
+++ b/bundle/Resources/config/services/controllers.yaml
@@ -24,6 +24,12 @@ services:
         arguments:
             - '@netgen_remote_media.provider'
 
+    netgen_remote_media.controller.resource.upload:
+        class: Netgen\Bundle\RemoteMediaBundle\Controller\Resource\Upload
+        public: true
+        arguments:
+            - '@netgen_remote_media.provider'
+
     netgen_remote_media.controller.callback.cloudinary.notify:
         class: Netgen\Bundle\RemoteMediaBundle\Controller\Callback\Cloudinary\Notify
         public: true
