--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
-        "symfony/proxy-manager-bridge": "^4.4 || ^5.2"
+        "symfony/proxy-manager-bridge": "^4.4 || ^5.2",
+        "symfony/form": "^4.4 || ^5.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
