--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,6 +37,9 @@ jobs:
       - run: composer global config --no-plugins allow-plugins.symfony/flex true
       - run: composer global require --no-scripts symfony/flex
 
+      # Install eZ Publish legacy installer as a global dependency
+      - run: composer config --no-plugins allow-plugins.ezsystems/ezpublish-legacy-installer [true|false]
+
       - run: composer config extra.symfony.require ${{ matrix.symfony }}
 
       -
