--- a/bundle/Resources/config/services/core.yaml
+++ b/bundle/Resources/config/services/core.yaml
@@ -10,7 +10,7 @@ services:
             - [setVariations, ["%netgen_remote_media.image_variations%"]]
             - [setServices, ["@netgen_remote_media.handler_registry", "@?logger"]]
 
-    netgen_remote_media.provider.cloudinary.gateway:
+    netgen_remote_media.provider.cloudinary.gateway.api:
         class: Netgen\RemoteMedia\Core\Provider\Cloudinary\Gateway\CloudinaryApiGateway
         public: false
         arguments:
@@ -21,12 +21,19 @@ services:
             - [initCloudinary, ['%netgen_remote_media.parameters.cloudinary.account_name%', '%netgen_remote_media.parameters.cloudinary.account_key%', "%netgen_remote_media.parameters.cloudinary.account_secret%", "%netgen_remote_media.parameters.use_subdomains%"]]
 
     netgen_remote_media.provider.cloudinary.gateway.cached:
-      class: Netgen\RemoteMedia\Core\Provider\Cloudinary\Gateway\Cache\Psr6CachedGateway
-      public: false
-      arguments:
-        - "@netgen_remote_media.provider.cloudinary.gateway"
-        - "@netgen_remote_media.cache.pool"
-        - "%netgen_remote_media.cache.ttl%"
+        class: Netgen\RemoteMedia\Core\Provider\Cloudinary\Gateway\Cache\Psr6CachedGateway
+        public: false
+        arguments:
+            - "@netgen_remote_media.provider.cloudinary.gateway.inner"
+            - "@netgen_remote_media.cache.pool"
+            - "%netgen_remote_media.cache.ttl%"
+
+    netgen_remote_media.provider.cloudinary.gateway.logged:
+        class: Netgen\RemoteMedia\Core\Provider\Cloudinary\Gateway\Log\MonologLoggedGateway
+        public: false
+        arguments:
+            - "@netgen_remote_media.provider.cloudinary.gateway.api"
+            - "@monolog.logger.cloudinary"
 
     netgen_remote_media.provider.cloudinary:
         class: Netgen\RemoteMedia\Core\Provider\Cloudinary\CloudinaryProvider
@@ -35,7 +42,7 @@ services:
             - "@netgen_remote_media.handler_registry"
             - "@netgen_remote_media.resolver.variation"
             - "@doctrine.orm.entity_manager"
-            - "@netgen_remote_media.provider.cloudinary.gateway.cached"
+            - "@netgen_remote_media.provider.cloudinary.gateway"
             - "@netgen_remote_media.factory.date_time"
             - "@netgen_remote_media.provider.cloudinary.resolver.upload_options"
             - "@?logger"
