--- a/bundle/Resources/config/services/core.yaml
+++ b/bundle/Resources/config/services/core.yaml
@@ -51,11 +51,16 @@ services:
         class: Netgen\RemoteMedia\Core\Provider\Cloudinary\Converter\ResourceType
         public: false
 
+    netgen_remote_media.provider.cloudinary.converter.visibility_type:
+        class: Netgen\RemoteMedia\Core\Provider\Cloudinary\Converter\VisibilityType
+        public: false
+
     netgen_remote_media.provider.cloudinary.factory.remote_resource:
         class: Netgen\RemoteMedia\Core\Provider\Cloudinary\Factory\RemoteResource
         public: false
         arguments:
             - '@netgen_remote_media.provider.cloudinary.converter.resource_type'
+            - '@netgen_remote_media.provider.cloudinary.converter.visibility_type'
             - '@netgen_remote_media.factory.md5_file_hash'
 
     netgen_remote_media.provider.cloudinary.factory.search_result:
@@ -67,12 +72,15 @@ services:
     netgen_remote_media.provider.cloudinary.resolver.upload_options:
         class: Netgen\RemoteMedia\Core\Provider\Cloudinary\Resolver\UploadOptions
         public: false
+        arguments:
+            - '@netgen_remote_media.provider.cloudinary.converter.visibility_type'
 
     netgen_remote_media.provider.cloudinary.resolver.search_expression:
         class: Netgen\RemoteMedia\Core\Provider\Cloudinary\Resolver\SearchExpression
         public: false
         arguments:
             - '@netgen_remote_media.provider.cloudinary.converter.resource_type'
+            - '@netgen_remote_media.provider.cloudinary.converter.visibility_type'
 
     netgen_remote_media.factory.date_time:
         class: Netgen\RemoteMedia\Core\Factory\DateTime
