NGGW-41 Implement watermark transformation

--- a/bundle/Resources/config/services/transformations.yaml
+++ b/bundle/Resources/config/services/transformations.yaml
@@ -88,3 +88,9 @@ services:
         public: false
         tags:
             - { name: netgen_remote_media.transformation_handler, alias: transformation, provider: cloudinary }
+
+    netgen_remote_media.handler.cloudinary.watermark_text:
+        class: Netgen\RemoteMedia\Core\Provider\Cloudinary\TransformationHandler\WatermarkText
+        public: false
+        tags:
+            - { name: netgen_remote_media.transformation_handler, alias: watermark_text, provider: cloudinary }
