--- a/bundle/Resources/config/services/controllers.yaml
+++ b/bundle/Resources/config/services/controllers.yaml
@@ -39,3 +39,4 @@ services:
             - '@netgen_remote_media.provider'
             - '@netgen_remote_media.provider.cloudinary.verifier.controller.signature'
             - '@doctrine.orm.entity_manager'
+            - '@event_dispatcher'
