--- a/bundle/Resources/config/default_parameters.yml
+++ b/bundle/Resources/config/default_parameters.yml
@@ -1,4 +1,5 @@
 parameters:
+    netgen_remote_media.parameters.upload_prefix: 'https://api.cloudinary.com'
     netgen_remote_media.parameters.use_subdomains: true
     netgen_remote_media.cloudinary.internal_limit: 500
     netgen_remote_media.cloudinary.cache_ttl: 7200
