Add branch alias

--- a/composer.json
+++ b/composer.json
@@ -61,5 +61,11 @@
     "scripts": {
         "test": "@php vendor/bin/phpunit --colors=always",
         "fix": "@php vendor/bin/php-cs-fixer fix"
+    },
+    "extra": {
+        "ezpublish-legacy-dir": "ezpublish_legacy",
+        "branch-alias": {
+            "dev-3.0": "3.0.x-dev"
+        }
     }
 }
