--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,9 @@
   "name": "netgen-remote-media-bundle",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "^12"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build && node copyFiles.js",
