--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "core-js": "^2.6.5",
     "cropperjs": "^1.5.5",
     "debounce": "^1.2.0",
+    "portal-vue": "^2.1.7",
     "pretty-bytes": "^5.6.0",
     "vue": "^2.6.10",
     "vue-select": "^3.2.0"
