--- a/composer.json
+++ b/composer.json
@@ -28,15 +28,15 @@
     "require": {
         "php": "^8.0",
         "cloudinary/cloudinary_php": "^1.20",
-        "symfony/mime": "^5.4 || ^6.2",
-        "symfony/twig-bundle": "^5.4 || ^6.2",
-        "symfony/framework-bundle": "^5.4 || ^6.2",
+        "symfony/mime": "^4.4 || ^5.4 || ^6.2",
+        "symfony/twig-bundle": "^4.4 || ^5.4 || ^6.2",
+        "symfony/framework-bundle": "^4.4 || ^5.4 || ^6.2",
         "composer/package-versions-deprecated": "1.11.99.4",
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
-        "symfony/proxy-manager-bridge": "^5.4 || ^6.2",
-        "symfony/form": "^5.4 || ^6.2"
+        "symfony/proxy-manager-bridge": "^4.4 || ^5.4 || ^6.2",
+        "symfony/form": "^4.4 || ^5.4 || ^6.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
