--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,12 @@
         "matthiasnoback/symfony-config-test": "^4.2",
         "mikey179/vfsstream": "^1.6",
         "friendsofphp/php-cs-fixer": "^3.0",
-        "rector/rector": "^0.11.53"
+        "symfony/var-dumper": "^4.4 || ^5.4 || ^6.2",
+        "phpstan/phpstan": "^1.9",
+        "phpstan/phpstan-strict-rules": "^1.4",
+        "phpstan/phpstan-symfony": "^1.2",
+        "phpstan/phpstan-doctrine": "^1.3",
+        "phpstan/phpstan-phpunit": "^1.3"
     },
     "autoload": {
         "psr-4": {
@@ -61,7 +66,9 @@
     },
     "scripts": {
         "test": "@php vendor/bin/phpunit --colors=always",
-        "fix": "@php vendor/bin/php-cs-fixer fix"
+        "fix": "@php vendor/bin/php-cs-fixer fix",
+        "phpstan": "@php vendor/bin/phpstan analyse -c phpstan.neon --level=1 --ansi lib bundle",
+        "phpstan-tests": "@php vendor/bin/phpstan analyse -c phpstan.tests.neon --level=1 --ansi tests"
     },
     "extra": {
         "ezpublish-legacy-dir": "ezpublish_legacy",
