--- a/bundle/Resources/config/doctrine.yaml
+++ b/bundle/Resources/config/doctrine.yaml
@@ -1,10 +1,9 @@
 orm:
     entity_managers:
         default:
-            auto_mapping: false
             mappings:
-                netgen_remote_media:
-                    type: annotation
+                NetgenRemoteMediaBundle:
+                    type: xml
                     prefix: Netgen\RemoteMedia\API\Values
-                    dir: "%kernel.project_dir%/vendor/netgen/remote-media-bundle/lib/API/Values"
+                    dir: "%kernel.project_dir%/vendor/netgen/remote-media-bundle/bundle/Resources/config/doctrine"
                     is_bundle: false
