NGSTACK-760 Create form type for selecting remote media folder

--- a/bundle/Resources/config/twig.yaml
+++ b/bundle/Resources/config/twig.yaml
@@ -1,2 +1,3 @@
 form_themes:
     - '@NetgenRemoteMedia/form/remote_media_type.html.twig'
+    - '@NetgenRemoteMedia/form/remote_media_folder_type.html.twig'
