--- a/bundle/Resources/config/services/form.yaml
+++ b/bundle/Resources/config/services/form.yaml
@@ -3,11 +3,21 @@ services:
         class: Netgen\RemoteMedia\Form\DataTransformer\RemoteMediaTransformer
         arguments:
             - "@netgen_remote_media.provider"
-                
+
     netgen_remote_media.form.type.remote_media:
         class: Netgen\RemoteMedia\Form\Type\RemoteMediaType
         arguments:
             - "@netgen_remote_media.form.data_transformer.remote_media"
             - "@netgen_remote_media.provider"
+        tags:
+            - { name: form.type }
+
+    netgen_remote_media.form.data_transformer.remote_media_folder:
+        class: Netgen\RemoteMedia\Form\DataTransformer\RemoteMediaFolderTransformer
+
+    netgen_remote_media.form.type.remote_media_folder:
+        class: Netgen\RemoteMedia\Form\Type\RemoteMediaFolderType
+        arguments:
+            - "@netgen_remote_media.form.data_transformer.remote_media_folder"
         tags:
             - { name: form.type }
