--- a/bundle/Resources/config/services/controllers.yaml
+++ b/bundle/Resources/config/services/controllers.yaml
@@ -30,6 +30,7 @@ services:
         arguments:
             - '@netgen_remote_media.provider'
             - '@netgen_remote_media.factory.md5_file_hash'
+            - '@translator'
 
     netgen_remote_media.controller.callback.cloudinary.notify:
         class: Netgen\Bundle\RemoteMediaBundle\Controller\Callback\Cloudinary\Notify
