--- a/bundle/Resources/config/default_parameters.yml
+++ b/bundle/Resources/config/default_parameters.yml
@@ -3,3 +3,5 @@ parameters:
     netgen_remote_media.cloudinary.internal_limit: 500
     netgen_remote_media.cloudinary.cache_ttl: 7200
     netgen_remote_media.default.parameters.audio.enable_waveform: false
+    netgen_remote_media.default.content_type.parent_folder:
+        default: null
