--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,16 +14,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [ '8.0', '8.1' ]
-        symfony: [ '~4.4.0', '~5.4.0', '~6.2.0' ]
+        php: ['8.1']
+        symfony: ['~5.4.0', '~6.2.0']
         deps: ['normal']
         include:
-          - php: '8.0'
-            symfony: '~4.4.0'
+          - php: '8.1'
+            symfony: '~5.4.0'
             deps: 'low'
-        exclude:
-          - php: '8.0'
-            symfony: '~6.2.0'
 
     steps:
       - uses: actions/checkout@v3
