--- a/composer.json
+++ b/composer.json
@@ -26,13 +26,13 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "cloudinary/cloudinary_php": "^1.20",
-        "symfony/mime": "^4.4 || ^5.4 || ^6.2",
-        "symfony/twig-bundle": "^4.4 || ^5.4 || ^6.2",
-        "symfony/framework-bundle": "^4.4 || ^5.4 || ^6.2",
-        "symfony/proxy-manager-bridge": "^4.4 || ^5.4 || ^6.2",
-        "symfony/form": "^4.4 || ^5.4 || ^6.2",
+        "symfony/mime": "^5.4 || ^6.2",
+        "symfony/twig-bundle": "^5.4 || ^6.2",
+        "symfony/framework-bundle": "^5.4 || ^6.2",
+        "symfony/proxy-manager-bridge": "^5.4 || ^6.2",
+        "symfony/form": "^5.4 || ^6.2",
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/orm": "^2.10"
     },
@@ -42,7 +42,7 @@
         "matthiasnoback/symfony-config-test": "^4.2",
         "mikey179/vfsstream": "^1.6",
         "friendsofphp/php-cs-fixer": "^3.0",
-        "symfony/var-dumper": "^4.4 || ^5.4 || ^6.2",
+        "symfony/var-dumper": "^5.4 || ^6.2",
         "phpstan/phpstan": "^1.9",
         "phpstan/phpstan-strict-rules": "^1.4",
         "phpstan/phpstan-symfony": "^1.2",
