--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "doctrine/orm": "^2.10"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.6 || ^10.0",
+        "phpunit/phpunit": "^10.1",
         "matthiasnoback/symfony-dependency-injection-test": "^4.2",
         "matthiasnoback/symfony-config-test": "^4.2",
         "mikey179/vfsstream": "^1.6",
