--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "portal-vue": "^2.1.7",
     "pretty-bytes": "^5.6.0",
     "vue": "^2.6.10",
+    "vue-debounce": "^4.0.0",
     "vue-select": "^3.2.0"
   },
   "devDependencies": {
