--- a/bundle/Resources/config/services/commands.yaml
+++ b/bundle/Resources/config/services/commands.yaml
@@ -1,4 +1,12 @@
 services:
+    netgen_remote_media.command.refresh_stored_resources:
+        class: Netgen\Bundle\RemoteMediaBundle\Command\RefreshStoredResourcesCommand
+        arguments:
+            - "@doctrine.orm.entity_manager"
+            - "@netgen_remote_media.provider"
+        tags:
+            - { name: console.command }
+
     netgen_remote_media.command.api_usage:
         class: Netgen\Bundle\RemoteMediaBundle\Command\ShowApiUsageCommand
         arguments:
