--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,9 @@
   },
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build && node copyFiles.js",
-    "dev": "vue-cli-service build --mode development && node copyFilesDev.js",
+    "build": "vue-cli-service build",
+    "dev": "vue-cli-service build --mode development",
+    "watch": "yarn dev --watch",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
