--- a/bundle/Resources/config/services/form.yaml
+++ b/bundle/Resources/config/services/form.yaml
@@ -3,6 +3,7 @@ services:
         class: Netgen\RemoteMedia\Form\DataTransformer\RemoteMediaTransformer
         arguments:
             - "@netgen_remote_media.provider"
+            - "@netgen_remote_media.service.remote_resource_service"
 
     netgen_remote_media.form.type.remote_media:
         class: Netgen\RemoteMedia\Form\Type\RemoteMediaType
