--- a/bundle/Resources/config/services/core.yaml
+++ b/bundle/Resources/config/services/core.yaml
@@ -27,6 +27,7 @@ services:
         arguments:
             - "@netgen_remote_media.provider.cloudinary.gateway.inner"
             - "@netgen_remote_media.cache.pool"
+            - "%netgen_remote_media.cloudinary.folder_mode%"
             - "%netgen_remote_media.cache.ttl%"
 
     netgen_remote_media.provider.cloudinary.gateway.logged:
@@ -48,6 +49,7 @@ services:
             - "@netgen_remote_media.provider.cloudinary.resolver.upload_options"
             - "%netgen_remote_media.named_remote_resources%"
             - "%netgen_remote_media.named_remote_resource_locations%"
+            - '%netgen_remote_media.cloudinary.folder_mode%'
             - "@?logger"
 
     netgen_remote_media.provider.cloudinary.converter.resource_type:
@@ -79,6 +81,7 @@ services:
             - '@netgen_remote_media.provider.cloudinary.converter.resource_type'
             - '@netgen_remote_media.provider.cloudinary.converter.visibility_type'
             - '@netgen_remote_media.factory.md5_file_hash'
+            - '%netgen_remote_media.cloudinary.folder_mode%'
 
     netgen_remote_media.provider.cloudinary.factory.search_result:
         class: Netgen\RemoteMedia\Core\Provider\Cloudinary\Factory\SearchResult
@@ -97,6 +100,7 @@ services:
         public: false
         arguments:
             - '@netgen_remote_media.provider.cloudinary.converter.visibility_type'
+            - '%netgen_remote_media.cloudinary.folder_mode%'
 
     netgen_remote_media.provider.cloudinary.resolver.search_expression:
         class: Netgen\RemoteMedia\Core\Provider\Cloudinary\Resolver\SearchExpression
@@ -104,6 +108,7 @@ services:
         arguments:
             - '@netgen_remote_media.provider.cloudinary.converter.resource_type'
             - '@netgen_remote_media.provider.cloudinary.converter.visibility_type'
+            - '%netgen_remote_media.cloudinary.folder_mode%'
 
     netgen_remote_media.factory.date_time:
         class: Netgen\RemoteMedia\Core\Factory\DateTime
