--- a/bundle/Resources/config/services/controllers.yaml
+++ b/bundle/Resources/config/services/controllers.yaml
@@ -41,5 +41,6 @@ services:
             - '@netgen_remote_media.provider.cloudinary.verifier.controller.signature'
             - '@doctrine.orm.entity_manager'
             - '@event_dispatcher'
+            - '%netgen_remote_media.cloudinary.folder_mode%'
         calls:
             - [setContainer, ['@service_container']]
